to-do app complete

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <h1 class="title">TO-DO LIST</h1>
       <form>
-        <input type="text" class="input" placeholder="what you want to do?" />
+        <input type="text" class="input" placeholder="what you want to do?" required autofocus/>
       </form>
 
       <div class="lists">
